Adjusted package due to errors with the new socket.io version

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
 	"version":			"0.0.1",
   "dependencies": {
     "coffee-script": ">= 1.0.1",
-    "socket.io": ">= 0.6.18"
+    "socket.io": "= 0.6.18"
   }
 }
